# GlacBot

./: .gitignore  Cargo.toml  GlacBot.csproj  Program.cs
old/: PlayerDBRequest.cs  Utils.cs
src/: main.rs
